# guildwars-mcp

./: .gitignore  claude_desktop_config.json  main.py  pyproject.toml
src/guildwars_mcp/: server.py  wiki_parser.py
tests/: conftest.py  test_gwpvx_parser.py  test_server.py
